--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The LPM showdown</title>
     <style>
-        body {
-            margin: 0;
-        }
+        /* make it look better */
     </style>
 </head>
 
