--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The LPM showdown</title>
     <style>
-        /* make it look better */
+        body {
+            padding: 2em;
+            display: flex;
+            justify-content: center;
+        }
     </style>
 </head>
 
