--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 2em;
             display: flex;
             justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
